# MiraculousKingdom

./: .env  ;  CONTRIBUTING.md  Cargo.toml  CulturalAficionado.md  Events.csv  MilitaryAdvisor.md  Miraculous Kingdom.md  README.md  Roadmap.md  RoyalScientist.md  design.html  docker-compose.yml  go.mod  go.sum  main.go  nginx.conf  open_api.json  prettier.config.js  run.vim  tailwind.config.js  up.ps1
Scripts/: Destroy.ps1
Youtube/: ThePhantomDom.md
certs/: cacert.pem  privkey.pem
config/: development.yaml  test.yaml
examples/: playground.rs
frontend/: biome.json  package.json  pnpm-lock.yaml  rsbuild.config.ts  skeleton.ts  tailwind.config.ts  tsconfig.json
frontend/src/: App.svelte  index.ts
migration/src/: lib.rs  m20241115_000002_classes.rs
miraculous-kingdom/: .prettierrc  dockerfile  index.html  nginx.conf  openapi.json  package.json  prettier.yaml  tailwind.config.cjs  tailwind.config.js
miraculous-kingdom-frontend/: .prettierrc  openapi.json  openapitools.json  package.json  tailwind.config.js  tsconfig.json
miraculous-kingdom-self-server/: .rustc_info.json  Cargo.toml  arch.md  docker-compose.yml  dockerfile  gpt.md
miraculous-kingdom-self-server/certs/: cacert.pem  mk.pem  privkey.pem
miraculous-kingdom-self-server/mongo-seed/: seed.js
miraculous-kingdom-self-server/src/: main.rs  new_char_request.json
miraculous-kingdom-self-server/src/api/: ability_api.rs  character_api.rs  class_api.rs  game_api.rs  mod.rs  queue_api.rs  season_api.rs
miraculous-kingdom-self-server/src/data_types/: data.rs  detialed_response.rs  mod.rs  polling.rs  repository.rs  requests.rs  traits.rs  ws.rs
miraculous-kingdom-self-server/src/ws/: mod.rs  queue.rs  queue_ws.rs  structs.rs
miraculous-kingdom-self-server/test/: Dockerfile
miraculous-kingdom/src-tauri/: Cargo.toml  (+2 more)
mk_surrealdb/: migrations.surql
routes/: error.html
src/: Utils.go  app.rs  data_old.rs  main.rs  utils.rs
static/: ability_test.html  index.html  index_reload.html  output.css
(+265 files in other folders)
