[package]
name = "miraculous_kingdom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.157", features = ["derive"] }
serde_json = "1.0.94"
serde_repr = "0.1"
axum = { version = "0.6.11" , features = ["ws", "tracing"] }
axum-server = { version = "0.3", features = ["tls-rustls"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4.12"
tower-http = {version = "0.4.0", features = ["cors", "trace"] }
futures = "0.3"
rand = "0.8.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1.68"
surrealdb = "1.0.0-beta.10"
dotenv = "0.15.0"
uuid = { version = "1.4.1", features = ["v4"]}
reqwest = { version = "0.11.4", features = ["json"] }
