[package]
name = "miraculous-kingdom-self-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.157"
serde_json = "1.0.94"
serde_repr = "0.1"
axum = { version = "0.6.11" , features = ["ws", "tracing"] }
axum-server = { version = "0.3", features = ["tls-rustls"] }
tokio = { version = "1", features = ["full"] }
mongodb = "2.4.0"
tower = "0.4.12"
tower-http = {version = "0.4.0", features = ["cors", "trace"] }
futures = "0.3"
rand = "0.8.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { version = "3.2.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "3", features = ["axum"] }


[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
